--- a/slide-foundation/package.json
+++ b/slide-foundation/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "autoprefixer": "^9.0.1",
     "grunt": "^1.0.3",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
